--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: java
-before_install:
-  - chmod +x mvnw
-script: "mvn cobertura:cobertura"
+
+script: "./mvnw cobertura:cobertura"
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
